fix: setup docs navbar z-index value to 100 to fix some component's element overlay the navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 /* @import 'fumadocs-ui/css/neutral.css'; */
-@import 'fumadocs-ui/css/black.css';
-@import 'fumadocs-ui/css/preset.css';
+@import "fumadocs-ui/css/black.css";
+@import "fumadocs-ui/css/preset.css";
 
 @source '../node_modules/fumadocs-ui/dist/**/*.js';
 
@@ -28,7 +28,6 @@
   --animate-float-slow: float 8s ease-in-out infinite;
 
   @keyframes float {
-
     0%,
     100% {
       transform: translateY(0);
@@ -96,8 +95,8 @@
   }
 
   /* Remove Safari input shadow on mobile */
-  input[type='text'],
-  input[type='email'] {
+  input[type="text"],
+  input[type="email"] {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -153,7 +152,6 @@ button {
   }
 }
 
-
 a[href="/docs/components/bento-grid"] {
   position: relative;
   padding-right: 2.5rem;
@@ -166,7 +164,7 @@ a[href="/docs/components/bento-grid"]::after {
   top: 50%;
   transform: translateY(-50%);
   background-color: rgba(59, 180, 75, 0.2);
-  color: #3BB44B;
+  color: #3bb44b;
   padding: 0.05rem 0.2rem;
   border-radius: 0.25rem;
   font-size: 0.75rem;
@@ -174,8 +172,6 @@ a[href="/docs/components/bento-grid"]::after {
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.2);
 }
-
-
 
 a[href="/docs/components/hero-geometric"] {
   position: relative;
@@ -189,7 +185,7 @@ a[href="/docs/components/hero-geometric"]::after {
   top: 50%;
   transform: translateY(-50%);
   background-color: rgba(59, 180, 75, 0.2);
-  color: #3BB44B;
+  color: #3bb44b;
   padding: 0.05rem 0.2rem;
   border-radius: 0.25rem;
   font-size: 0.75rem;
@@ -236,11 +232,16 @@ a[href="/docs/components/vercel-v0-chat"]::after {
   top: 50%;
   transform: translateY(-50%);
   background-color: rgba(59, 180, 75, 0.2);
-  color: #3BB44B;
+  color: #3bb44b;
   padding: 0.05rem 0.2rem;
   border-radius: 0.25rem;
   font-size: 0.75rem;
   font-weight: 500;
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+/* Higher z-index to cover text overflow the navbar */
+#nd-subnav {
+  z-index: 100;
 }
